--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -2477,8 +2477,8 @@
               class="_1w7e1y2"
               style="border-width: 0px 8px; max-width: 80%; flex: 0 0 80%"
             >
-              <div data-key="65246614false" class="_1yfus1e">
-                <div class="_1yfus1e">
+              <div data-key="65246614false" class="h-full">
+                <div class="h-full">
                   <div class="_1xk0grw">
                     <div class="_pgfqnw" id="card-availability-title-65246614">
                       Wed, Nov 9
@@ -2530,8 +2530,8 @@
               class="_1w7e1y2"
               style="border-width: 0px 8px; max-width: 80%; flex: 0 0 80%"
             >
-              <div data-key="65246615false" class="_1yfus1e">
-                <div class="_1yfus1e">
+              <div data-key="65246615false" class="h-full">
+                <div class="h-full">
                   <div class="_1xk0grw">
                     <div class="_pgfqnw" id="card-availability-title-65246615">
                       Thu, Nov 10
@@ -2583,8 +2583,8 @@
               class="_1w7e1y2"
               style="border-width: 0px 8px; max-width: 80%; flex: 0 0 80%"
             >
-              <div data-key="65246616false" class="_1yfus1e">
-                <div class="_1yfus1e">
+              <div data-key="65246616false" class="h-full">
+                <div class="h-full">
                   <div class="_1xk0grw">
                     <div class="_pgfqnw" id="card-availability-title-65246616">
                       Fri, Nov 11
@@ -2636,8 +2636,8 @@
               class="_1w7e1y2"
               style="border-width: 0px 8px; max-width: 80%; flex: 0 0 80%"
             >
-              <div data-key="65246617false" class="_1yfus1e">
-                <div class="_1yfus1e">
+              <div data-key="65246617false" class="h-full">
+                <div class="h-full">
                   <div class="_1xk0grw">
                     <div class="_pgfqnw" id="card-availability-title-65246617">
                       Sat, Nov 12
@@ -2689,8 +2689,8 @@
               class="_1w7e1y2"
               style="border-width: 0px 8px; max-width: 80%; flex: 0 0 80%"
             >
-              <div data-key="65246618false" class="_1yfus1e">
-                <div class="_1yfus1e">
+              <div data-key="65246618false" class="h-full">
+                <div class="h-full">
                   <div class="_1xk0grw">
                     <div class="_pgfqnw" id="card-availability-title-65246618">
                       Sun, Nov 13
@@ -2742,8 +2742,8 @@
               class="_1w7e1y2"
               style="border-width: 0px 8px; max-width: 80%; flex: 0 0 80%"
             >
-              <div data-key="65246619false" class="_1yfus1e">
-                <div class="_1yfus1e">
+              <div data-key="65246619false" class="h-full">
+                <div class="h-full">
                   <div class="_1xk0grw">
                     <div class="_pgfqnw" id="card-availability-title-65246619">
                       Mon, Nov 14
@@ -2795,8 +2795,8 @@
               class="_1w7e1y2"
               style="border-width: 0px 8px; max-width: 80%; flex: 0 0 80%"
             >
-              <div data-key="65246620false" class="_1yfus1e">
-                <div class="_1yfus1e">
+              <div data-key="65246620false" class="h-full">
+                <div class="h-full">
                   <div class="_1xk0grw">
                     <div class="_pgfqnw" id="card-availability-title-65246620">
                       Tue, Nov 15
@@ -2848,8 +2848,8 @@
               class="_1w7e1y2"
               style="border-width: 0px 8px; max-width: 80%; flex: 0 0 80%"
             >
-              <div data-key="65246621false" class="_1yfus1e">
-                <div class="_1yfus1e">
+              <div data-key="65246621false" class="h-full">
+                <div class="h-full">
                   <div class="_1xk0grw">
                     <div class="_pgfqnw" id="card-availability-title-65246621">
                       Wed, Nov 16
@@ -6213,7 +6213,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                     <ul class="_3uceys" style="margin-left: -6px; margin-right: -6px;">
                                                       <li aria-hidden="false" data-key="Join a video call_0" class="_1w7e1y2"
                                                         style="border-width: 0px 6px; max-width: 33.3333%; flex: 0 0 33.3333%;">
-                                                        <div data-key="Join a video call_0" class="_1yfus1e">
+                                                        <div data-key="Join a video call_0" class="h-full">
                                                           <div class="_qzp5rw5">
                                                             <div>
                                                               <div class="_in41ap1"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
@@ -6232,7 +6232,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                       </li>
                                                       <li aria-hidden="false" data-key="Book a private group_1" class="_1w7e1y2"
                                                         style="border-width: 0px 6px; max-width: 33.3333%; flex: 0 0 33.3333%;">
-                                                        <div data-key="Book a private group_1" class="_1yfus1e">
+                                                        <div data-key="Book a private group_1" class="h-full">
                                                           <div class="_qzp5rw5">
                                                             <div>
                                                               <div class="_in41ap1"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
