--- a/listings-product/places.html
+++ b/listings-product/places.html
@@ -430,7 +430,7 @@
                                         >
                                           <div
                                             data-key="https://a0.muscache.com/im/pictures/e557bf4b-cde7-4107-a696-2c22ab889b69.jpg?aki_policy=large"
-                                            class="_1yfus1e"
+                                            class="h-full"
                                           >
                                             <div class="_v0gz4uz" style="--dls-liteimage-padding-top: 56%">
                                               <div class="_4626ulj">
@@ -463,7 +463,7 @@
                                         >
                                           <div
                                             data-key="https://a0.muscache.com/im/pictures/34527a29-4963-4a2a-9a15-c694574accbb.jpg?aki_policy=large"
-                                            class="_1yfus1e"
+                                            class="h-full"
                                           >
                                             <div class="_v0gz4uz" style="--dls-liteimage-padding-top: 56%">
                                               <div class="_4626ulj">
@@ -495,7 +495,7 @@
                                         >
                                           <div
                                             data-key="https://a0.muscache.com/im/pictures/c5af983b-869e-4b0f-bfc4-e0f1e045e154.jpg?aki_policy=large"
-                                            class="_1yfus1e"
+                                            class="h-full"
                                           >
                                             <div class="_v0gz4uz" style="--dls-liteimage-padding-top: 56%">
                                               <div class="_4626ulj">
@@ -527,7 +527,7 @@
                                         >
                                           <div
                                             data-key="https://a0.muscache.com/im/pictures/d12c4075-afcf-487e-be87-9ab79c2029bf.jpg?aki_policy=large"
-                                            class="_1yfus1e"
+                                            class="h-full"
                                           >
                                             <div class="_v0gz4uz" style="--dls-liteimage-padding-top: 56%">
                                               <div class="_4626ulj">
