--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -3627,7 +3627,7 @@
                                               <li aria-hidden="false" data-key="Start-to-finish trip planning"
                                                 class="_1w7e1y2"
                                                 style="border-width: 0px 6px; max-width: 72.7273%; flex: 0 0 72.7273%;">
-                                                <div data-key="Start-to-finish trip planning" class="_1yfus1e">
+                                                <div data-key="Start-to-finish trip planning" class="h-full">
                                                   <div class="_ctz3yu">
                                                     <div class="relative">
                                                       <div class="_v0gz4uz"
@@ -3666,7 +3666,7 @@
                                               <li aria-hidden="false" data-key="300 point inspection and vetting"
                                                 class="_1w7e1y2"
                                                 style="border-width: 0px 6px; max-width: 72.7273%; flex: 0 0 72.7273%;">
-                                                <div data-key="300 point inspection and vetting" class="_1yfus1e">
+                                                <div data-key="300 point inspection and vetting" class="h-full">
                                                   <div class="_ctz3yu">
                                                     <div class="relative">
                                                       <div class="_v0gz4uz"
@@ -3704,7 +3704,7 @@
                                               </li>
                                               <li aria-hidden="false" data-key="On-trip care" class="_1w7e1y2"
                                                 style="border-width: 0px 6px; max-width: 72.7273%; flex: 0 0 72.7273%;">
-                                                <div data-key="On-trip care" class="_1yfus1e">
+                                                <div data-key="On-trip care" class="h-full">
                                                   <div class="_ctz3yu">
                                                     <div class="relative">
                                                       <div class="_v0gz4uz"
@@ -12637,7 +12637,7 @@
                                                 <li aria-hidden="false" data-key="Your Renaissance retreat"
                                                   class="_1w7e1y2"
                                                   style="border-width: 0px 8px; max-width: 33.3333%; flex: 0 0 33.3333%;">
-                                                  <div data-key="Your Renaissance retreat" class="_1yfus1e">
+                                                  <div data-key="Your Renaissance retreat" class="h-full">
                                                     <div class="_ctz3yu">
                                                       <div class="relative">
                                                         <div class="_v0gz4uz"
@@ -12677,7 +12677,7 @@
                                                 <li aria-hidden="false" data-key="A revered garden estate"
                                                   class="_1w7e1y2"
                                                   style="border-width: 0px 8px; max-width: 33.3333%; flex: 0 0 33.3333%;">
-                                                  <div data-key="A revered garden estate" class="_1yfus1e">
+                                                  <div data-key="A revered garden estate" class="h-full">
                                                     <div class="_ctz3yu">
                                                       <div class="relative">
                                                         <div class="_v0gz4uz"
@@ -12716,7 +12716,7 @@
                                                 </li>
                                                 <li aria-hidden="false" data-key="Tranquil seclusion" class="_1w7e1y2"
                                                   style="border-width: 0px 8px; max-width: 33.3333%; flex: 0 0 33.3333%;">
-                                                  <div data-key="Tranquil seclusion" class="_1yfus1e">
+                                                  <div data-key="Tranquil seclusion" class="h-full">
                                                     <div class="_ctz3yu">
                                                       <div class="relative">
                                                         <div class="_v0gz4uz"
@@ -13268,7 +13268,7 @@
                                               <li aria-hidden="false" data-key="Start-to-finish trip planning"
                                                 class="_1w7e1y2"
                                                 style="border-width: 0px 8px; max-width: 33.3333%; flex: 0 0 33.3333%;">
-                                                <div data-key="Start-to-finish trip planning" class="_1yfus1e">
+                                                <div data-key="Start-to-finish trip planning" class="h-full">
                                                   <div class="_ctz3yu">
                                                     <div class="relative">
                                                       <div class="_v0gz4uz"
@@ -13307,7 +13307,7 @@
                                               <li aria-hidden="false" data-key="300 point inspection and vetting"
                                                 class="_1w7e1y2"
                                                 style="border-width: 0px 8px; max-width: 33.3333%; flex: 0 0 33.3333%;">
-                                                <div data-key="300 point inspection and vetting" class="_1yfus1e">
+                                                <div data-key="300 point inspection and vetting" class="h-full">
                                                   <div class="_ctz3yu">
                                                     <div class="relative">
                                                       <div class="_v0gz4uz"
@@ -13345,7 +13345,7 @@
                                               </li>
                                               <li aria-hidden="false" data-key="On-trip care" class="_1w7e1y2"
                                                 style="border-width: 0px 8px; max-width: 33.3333%; flex: 0 0 33.3333%;">
-                                                <div data-key="On-trip care" class="_1yfus1e">
+                                                <div data-key="On-trip care" class="h-full">
                                                   <div class="_ctz3yu">
                                                     <div class="relative">
                                                       <div class="_v0gz4uz"
