--- a/become-a-host/location.html
+++ b/become-a-host/location.html
@@ -344,7 +344,7 @@
                                          <label class="_1yw7hpv" for="street">
                                           <div class="_1m2ich98"><div class="_11hx67x">Street</div></div>
                                           <div dir="ltr">
-                                           <div class="_fywymp7"><input aria-invalid="false" required="" class="_yrzsibu" id="street" autocomplete="off" type="text" aria-describedby="" value="Manila - Cavite Expressway" /></div>
+                                           <div class="_fywymp7"><input aria-invalid="false" required="" class="form__input" id="street" autocomplete="off" type="text" aria-describedby="" value="Manila - Cavite Expressway" /></div>
                                           </div>
                                          </label>
                                         </div>
@@ -396,7 +396,7 @@
                                          <label class="_1yw7hpv" for="city">
                                           <div class="_1m2ich98"><div class="_11hx67x">City</div></div>
                                           <div dir="ltr">
-                                           <div class="_fywymp7"><input aria-invalid="false" required="" class="_yrzsibu" id="city" autocomplete="off" type="text" aria-describedby="" value="Parañaque" /></div>
+                                           <div class="_fywymp7"><input aria-invalid="false" required="" class="form__input" id="city" autocomplete="off" type="text" aria-describedby="" value="Parañaque" /></div>
                                           </div>
                                          </label>
                                         </div>
@@ -422,7 +422,7 @@
                                          <label class="_1yw7hpv" for="state">
                                           <div class="_1m2ich98"><div class="_11hx67x">State (Optional)</div></div>
                                           <div dir="ltr">
-                                           <div class="_fywymp7"><input aria-invalid="false" required="" class="_yrzsibu" id="state" autocomplete="off" type="text" aria-describedby="" value="Metro Manila" /></div>
+                                           <div class="_fywymp7"><input aria-invalid="false" required="" class="form__input" id="state" autocomplete="off" type="text" aria-describedby="" value="Metro Manila" /></div>
                                           </div>
                                          </label>
                                         </div>
