--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -7157,7 +7157,7 @@
                 name="wishlists.ListSettings.wishlist_name"
                 data-testid="list-settings-modal_name-input"
                 maxlength="50"
-                class="_yrzsibu"
+                class="form__input"
                 id="wishlists.ListSettings.wishlist_name"
                 autocomplete="off"
                 type="text"
