--- a/payments/payment.html
+++ b/payments/payment.html
@@ -7853,7 +7853,7 @@
                             <div class="_fywymp7">
                               <input
                                 name="quick_pay.coupon.modal.code_input"
-                                class="_yrzsibu"
+                                class="form__input"
                                 id="quick_pay.coupon.modal.code_input"
                                 autocomplete="off"
                                 type="text"
