--- a/submission/bring.html
+++ b/submission/bring.html
@@ -1282,7 +1282,7 @@
          <label class="_1yw7hpv" for="packing-item-6">
           <div class="_1m2ich98"><div class="_11hx67x">Item</div></div>
           <div dir="ltr">
-           <div class="_fywymp7"><input data-testid="packing-item-6" class="_yrzsibu" id="packing-item-6" autocomplete="off" type="text" aria-describedby="" value="dsada" /></div>
+           <div class="_fywymp7"><input data-testid="packing-item-6" class="form__input" id="packing-item-6" autocomplete="off" type="text" aria-describedby="" value="dsada" /></div>
           </div>
          </label>
          <div class="_129y4gf">
