--- a/edit/bring.html
+++ b/edit/bring.html
@@ -572,7 +572,7 @@
                                                         <div class="spinner-chart__input-currency">
                                                           <input
                                                             data-testid="packing-item-0"
-                                                            class="_yrzsibu"
+                                                            class="form__input"
                                                             id="packing-item-0"
                                                             autocomplete="off"
                                                             type="text"
@@ -633,7 +633,7 @@
                                                         <div class="spinner-chart__input-currency">
                                                           <input
                                                             data-testid="packing-item-1"
-                                                            class="_yrzsibu"
+                                                            class="form__input"
                                                             id="packing-item-1"
                                                             autocomplete="off"
                                                             type="text"
@@ -694,7 +694,7 @@
                                                         <div class="spinner-chart__input-currency">
                                                           <input
                                                             data-testid="packing-item-2"
-                                                            class="_yrzsibu"
+                                                            class="form__input"
                                                             id="packing-item-2"
                                                             autocomplete="off"
                                                             type="text"
@@ -755,7 +755,7 @@
                                                         <div class="spinner-chart__input-currency">
                                                           <input
                                                             data-testid="packing-item-3"
-                                                            class="_yrzsibu"
+                                                            class="form__input"
                                                             id="packing-item-3"
                                                             autocomplete="off"
                                                             type="text"
@@ -816,7 +816,7 @@
                                                         <div class="spinner-chart__input-currency">
                                                           <input
                                                             data-testid="packing-item-4"
-                                                            class="_yrzsibu"
+                                                            class="form__input"
                                                             id="packing-item-4"
                                                             autocomplete="off"
                                                             type="text"
@@ -877,7 +877,7 @@
                                                         <div class="spinner-chart__input-currency">
                                                           <input
                                                             data-testid="packing-item-5"
-                                                            class="_yrzsibu"
+                                                            class="form__input"
                                                             id="packing-item-5"
                                                             autocomplete="off"
                                                             type="text"
@@ -1545,7 +1545,7 @@
          <label class="_1yw7hpv" for="packing-item-6">
           <div class="_1m2ich98"><div class="_11hx67x">Item</div></div>
           <div dir="ltr">
-           <div class="_fywymp7"><input data-testid="packing-item-6" class="_yrzsibu" id="packing-item-6" autocomplete="off" type="text" aria-describedby="" value="dsada" /></div>
+           <div class="_fywymp7"><input data-testid="packing-item-6" class="form__input" id="packing-item-6" autocomplete="off" type="text" aria-describedby="" value="dsada" /></div>
           </div>
          </label>
          <div class="_129y4gf">
