--- a/listings-product/places.html
+++ b/listings-product/places.html
@@ -416,7 +416,7 @@
                                   style="background: white; --dls-basecard-padding-top: 56%"
                                 >
                                   <div class="_1szwzht">
-                                    <div class="_1trgpf1">
+                                    <div class="img-container">
                                       <ul
                                         aria-label="Photo of Nobu Malibu in Eastern Malibu"
                                         class="_rxz20bq"
