--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -201,7 +201,7 @@
                                             <div class="_18d0wvf">
                                               <div class="_skzmvy">
                                                 <div class="_1f7hlfr0">
-                                                  <div class="_1emsdka"><button
+                                                  <div class="img-container"><button
                                                       aria-label="Listing image 1, Show all photos" type="button"
                                                       class="_1xh26pm2" data-modal="#gallery-modal-mobile">
                                                       <div class="_1h6n1zu"
@@ -223,7 +223,7 @@
                                                     </button></div>
                                                 </div>
                                                 <div class="_jjhle6i">
-                                                  <div class="_1emsdka"><button
+                                                  <div class="img-container"><button
                                                       aria-label="Listing image 1, Show all photos" type="button"
                                                       class="_1xh26pm2">
                                                       <div class="_1h6n1zu"
