--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -25146,7 +25146,7 @@
                                         </span>
                                       </button>
                                     </div>
-                                    <div class="carousel-slider__body">
+                                    <div class="img-container">
                                       <ul aria-label="9 double bedroom luxury villa with infinity pool" class="_rxz20bq"
                                         style="
                                             margin-left: 0px;
